welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:2: error: not found: value tab
  var t : Int = tab.length
                ^indexOfMaxValue:3: error: not found: value tab
  var a : Int = tab(0)
                ^indexOfMaxValue:6: error: not found: value tab
      if (tab(i)>a) {
          ^indexOfMaxValue:7: error: not found: value tab
        a = tab(i)
            ^